maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: illegal start of simple pattern
    case 1 && !estFaceMur => avance()
                          ^RandomMouseMaze:5: error: '=>' expected but ';' found.
    case 2 => droite()
^RandomMouseMaze:7: error: '=>' expected but '}' found.
    }
    ^