maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    random3() match{
    case 1 && !estFaceMur => avance()
    case 2 => droite()
    case _ 
    }
}
